deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab
  labels:
    app: devops-lab
spec:
  type: ClusterIP
  selector:
    app: devops-lab
  ports:
    - name: http
      port: 80
      targetPort: http
